# medeia-imdb

./: .gitignore  Makefile  README.md  datetime_utils.py  imdb.py  medeia.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  update.yml  update_imdb.yml  update_medeia.yml
data/: imdb.csv  movies.csv  sessions.csv
frontend/: index.html
frontend/assets/: app.js  styles.css
src/: imdb.py  medeia.py  utils.py
